sample/pair-pro/application/errors/undefined-element.ts
export class UndefinedElement extends Error {}
